--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,140 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  box-sizing: border-box;
+  outline: none;
+  overflow: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-weight: bold;
+}
+
+p {
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  background-color: #fff;
+}
+
+.container {
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+  padding: 20px 0;
+  text-align: left;
+}
+
+.header {
   align-items: center;
+  padding: 25px 0;
+  background-color: #208AEC;
+}
+
+.header_logo {
+  height: 55px;
+  margin-bottom: 20px;
+  object-fit: contain;
+}
+
+.header_text_bold {
+  margin-bottom: 3px;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.header_text {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 15px;
+}
+
+.heading {
+  font-size: 22px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex_between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex_child {
+  flex: 0 0 45%;
+}
+
+.heading_button {
+  margin-left: 12px;
+}
+
+.list_item {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+  text-align: left;
+}
+
+.list_item_title {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 17px;
+}
+
+.list_item_description {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 15px;
+}
+
+.form_input {
+  margin-bottom: 20px;
+}
+
+.login-social {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.login-social-item {
+  width: 54px;
+  height: 54px;
+  border-radius: 54px;
+  padding: 12px;
+  margin: 0 12px;
+  border: 1px solid #e6e6e6;
+  box-shadow: 0 2px 4px #d6d6d6;
 }
 
-.heart {
-  color: #ff0000;
+.login-social-item--facebook {
+  padding: 4px;
+  background-color: #3C5B9B;
 }
 
-.small {
-  font-size: 0.75rem;
+.login-social-item__image {
+  width: 100%;
+}
+
+.form__hint {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 16px;
+  text-align: center;
 }
